--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@vercel/node": "^2.9.10"
   }
 }
