--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,17 @@
     "version": 2,
     "builds": [
         {
-            "src": "./server.js",
+            "src": "./index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/",
+            "methods": [
+                "GET"
+            ]
         }
     ]
 }
